--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
   
     <div id = "whole">
-      <div id="scores"></div>
-      <div class="gameover"><h1>Game Over</h1></div>
+      <div id="scores" class="scorrr scoreslook"></div>
+      <div class="gameover"><h1>Game Over</h1>
+      <button class="again" onclick="location.reload()">Try Again</button></div>
       <div class="cat catend"> </div>
+      <div class="shooting"></div>
       <div class="mouse animatemouse ">  </div>
     </div>
    
